update git doc